Points of Curves in Vector Curves node can't have negative X or Y values. #33846

Closed
opened 2013-01-12 15:22:49 +01:00 by ronan ducluzeau · 3 comments

%%%--- Operating System, Graphics card ---
Ubuntu 12.04.1 64bits , Nvidia Quadro FX 3500

- Blender version with error, and version that worked ---

It does not work on revision 53741 and it seems to not work since blender 2.64. It works in 2.63.

- Short description of error ---

Points of Curves in Vector Curves node can't have negative X or Y values.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open attached VectorCurves.blend.
Select point on the right by clicking on it.
The point jumps to coordinates x=0 y=0.
And it can't be move to negative values.
Any point of the curve can't be move to negative values by dragging it or by typing numeric value in corresponding field.

%%%

%%%--- Operating System, Graphics card --- Ubuntu 12.04.1 64bits , Nvidia Quadro FX 3500 - Blender version with error, and version that worked --- It does not work on revision 53741 and it seems to not work since blender 2.64. It works in 2.63. - Short description of error --- Points of Curves in Vector Curves node can't have negative X or Y values. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open attached VectorCurves.blend. Select point on the right by clicking on it. The point jumps to coordinates x=0 y=0. And it can't be move to negative values. Any point of the curve can't be move to negative values by dragging it or by typing numeric value in corresponding field. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r53753.%%%

%%%fixed r53753.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33846
No description provided.