fix [#33846] Points of Curves in Vector Curves node can't have negative X or Y values/.